<resources>
    <string name="app_name">Recognition Camera</string>
    <string name="open_camera">Open Camera</string>
    <string name="detection_system">DETECTION SYSTEM</string>
    <string name="open_gallery">Open Gallery</string>
    <string name="face_detection_system">Face Detection System</string>
    <string name="use_the_camera_to_test_the_facial_recognition_system">Use the camera to test the Facial Recognition System</string>
    <string name="tap_the_icon_to_open_the_camera">Tap the icon to open the Camera</string>
    <string name="photo">Photo</string>
    <string name="button_of_camera_configuration">Button of camera configuration</string>
    <string name="url_of_api">API URL</string>
    <string name="key_of_api">API KEY</string>
    <string name="save">Save</string>
    <string name="resnet">ResNet</string>
    <string name="mobilenet">MobileNet</string>
    <string name="button_of_back_view">Button of back view</string>
    <string name="login">Login to continue</string>
    <string name="login_view">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm">Confirm</string>
    <string name="administrator">Administrator</string>
    <string name="teacher">Teacher</string>
    <string name="register_attendance">Register Attendance</string>
    <string name="validate_attendance">Validate Attendance</string>
    <string name="logout">Logout</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_user">Welcome Back, %1$s!</string>
    <string name="school_roll_call">Roll Call</string>
    <string name="name">Name</string>
    <string name="registration">Registration</string>
    <string name="status">Status</string>
    <string name="icon_logout">Icon logout</string>
    <string name="image_home_page_app">image home page app</string>
    <string name="smart_attendance_board">Smart Attendance Board</string>
    <string name="today_s_date">Today\'s Date</string>
    <string name="student_attendance_management">Student Attendance Management</string>
    <string name="welcome_back_mr_paulo_henrique">Welcome Back, Mr. Paulo Henrique!</string>
    <string name="ready_to_take_attendance_for_today_s_class">Ready to take attendance for today\'s class?</string>
    <string name="jan_19_2026">Jan 19, 2026</string>
    <string name="_8_24_am">8:24 AM</string>
    <string name="mr_paulo_henrique">Mr. Paulo Henrique</string>
    <string name="extens_o_3">Extensão 3</string>
    <string name="image_account">Image Account</string>
    <string name="logo_account_image">Logo Account Image</string>
    <string name="total_students">Total Students</string>
    <string name="_32">32</string>
    <string name="students_image">Students image</string>
    <string name="present_today">Present Today</string>
    <string name="_28">28</string>
    <string name="present_image">Present Image</string>
    <string name="open_the_school_attendance_list">Open the school attendance list</string>
    <string name="validate_attendance_title">Validate Attendance</string>
    <string name="start_facial_recognition_based_attendance">Start facial recognition-based attendance</string>
    <string name="register_attendance_title">Register Attendance</string>
    <string name="logo_register_attendance_button">Logo Register Attendance Button</string>
    <string name="attendance_rate">Attendance Rate</string>
    <string name="_87_5">87.5%</string>
    <string name="quick_actions">Quick Actions</string>
    <string name="configuration_api">Configuration API</string>
    <string name="class_extens_o_3_date_january_19_2026">Class: Extensão 3 | Date: January 19, 2026</string>
    <string name="attendance_records">Attendance Records</string>
    <string name="smart_attendance_for_smarter_classrooms">Smart attendance for smarter classrooms</string>
</resources>