<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="24dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog_login"
    android:gravity="center">

    <TextView
        android:layout_width="169dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:textAlignment="center"
        android:text="@string/login_view"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edtUser"
        android:autofillHints="name"
        android:inputType="text"
        android:hint="@string/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/edtPassword"
        android:autofillHints="password"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"/>

    <RadioGroup
        android:id="@+id/radioGroupTypeUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="4dp">

        <RadioButton
            android:id="@+id/radioAdministrator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/administrator" />

        <RadioButton
            android:id="@+id/radioUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/teacher"
            android:layout_marginStart="16dp"/>
    </RadioGroup>

    <Button
        android:id="@+id/btnConfirm"
        android:text="@string/confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"/>
</LinearLayout>
